alpm-repo-db/tests/correct/files/nested.files
%FILES%
etc/
etc/foo/
etc/foo/bar.conf
etc/foo/foo.conf
usr/
usr/bin/
usr/bin/foo
usr/share/
usr/share/doc/
usr/share/doc/foo/
usr/share/doc/foo/README
