alpm-repo-db/tests/parse_errors/files/empty_line_in_list_of_paths.files
%FILES%
usr/
usr/bin/

usr/bin/foo
